// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GatewayDest prop unmountOnEmpty should not render (or render) when no (or some) Gateways are registered and "unmountOnEmpty" is set  1`] = `<div />`;

exports[`GatewayDest prop unmountOnEmpty should not render (or render) when no (or some) Gateways are registered and "unmountOnEmpty" is set  2`] = `
<div>
  <div>
    Hello world
  </div>
</div>
`;

exports[`GatewayDest prop unmountOnEmpty should not render (or render) when no (or some) Gateways are registered and "unmountOnEmpty" is set  3`] = `<div />`;

exports[`GatewayDest prop unmountOnEmpty should render when there are Gateways registered and "unmountOnEmpty" is set  1`] = `
<div>
  <div>
    hello
  </div>
</div>
`;

exports[`GatewayDest should not render on null Gateway 1`] = `<div />`;

exports[`GatewayDest should render div w/ className and component 1`] = `
<div>
  <span
    className="something"
  />
</div>
`;

exports[`GatewayDest should render div w/ className and component 2`] = `<div />`;
